# airhorizon

./: .gitattributes  .gitignore  Cargo.toml  airhorizon plan.md  rebuild-plan.md
crates/basemap/: Cargo.toml
crates/basemap/examples/: dump_tile.rs
crates/basemap/src/: lib.rs
crates/dem/: Cargo.toml
crates/dem/examples/: lidarprobe.rs  probe.rs  ravine.rs
crates/dem/src/: asc.rs  lib.rs  lidar.rs
crates/geodesy/: Cargo.toml
crates/geodesy/src/: bng.rs  lib.rs  mercator.rs  tile.rs
crates/horizon/: Cargo.toml
crates/horizon/examples/: cast.rs  gilldebug.rs  visible.rs  wasdale.rs
crates/horizon/src/: lib.rs
crates/mapdata/: Cargo.toml
crates/mapdata/examples/: dump_paths.rs
crates/mapdata/src/: lib.rs
crates/peaks/: Cargo.toml
crates/peaks/examples/: dump_peaks.rs
crates/peaks/src/: lib.rs
crates/view/: Cargo.toml
crates/view/src/: line.wgsl  main.rs  path.wgsl  text.rs  text.wgsl
data/: download.sh  lidar-download.ps1
