[workspace]
resolver = "2"
members = [
    "crates/geodesy",
    "crates/basemap",
    "crates/mapdata",
    "crates/peaks",
    "crates/view",
]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
