[package]
name = "view"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "AirHorizon vector map viewer: live-renders OS Open Zoomstack MVT tiles (winit + wgpu)."

[[bin]]
name = "airhorizon-view"
path = "src/main.rs"

[dependencies]
geodesy = { path = "../geodesy" }
basemap = { path = "../basemap" }
mapdata = { path = "../mapdata" }
peaks = { path = "../peaks" }
winit = "0.30"
wgpu = "23"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
earcutr = "0.4"   # polygon triangulation for area fills
lyon = "1"        # stroke tessellation for thick lines
fontdue = "0.9"   # glyph rasterisation for place-name labels
